      - Modify Regex search code to use UTF-16 instead of UTF-8 for all
        searches. This brings search in line with the view components
        being able to display UTF-16 characters.
    - Implement issue 1378: Update Hunspell to 1.3.2.
    - Implement issue 1379: Update Boost to Boost 1.49.0.
    - Implement issue 1283: Spell check should have an ignore option.
    - Fix issue 1477: Sigil may crash when loading ePubs containing empty (zero-sized) files.
    - Fix issue 1589: Clicking on TOC entry the first time does not scroll to a heading at the top of the page.
    - Fix issue 1582: Replace All should be single-threaded to avoid certain crashes.
    - Fix issue 1581: Caret position in Book View - Code View syncing is not always correct.
    - Fix issue 1580: Chapter split starts new files with suffix _002 instead of 001.
    - Fix issue 1579: Generate Headings in TOC should select next item after unchecking an item.
    - Fix issue 1563: Split Chapter break can create empty page.
    - Fix issue 1284: Image and Stylesheet paths not updated for duplicate references when importing.
    - Fix issue 1155: Filename removed from href in anchor tag when importing HTML.
    - Fix issue 1553: Rename of one html file should keep file selected, allow rename shortcut, link stylesheets.
    - Fix issue 1551: Generate TOC include column scrolls offscreen when headings are long.
    - Fix issue 1550: Table of Contents window is not emptied if all TOC entries deleted manually.
    - Fix issue 1549: Sigil should not modify source by converting shy/ndash/mdash to entities automatically.
    - Fix issue 1345: Adding accented words dictionary doesn't work.
    - Fix issue 1546: Find&Replace loses focus when changing tabs or going from Book to Code View.
    - Fix issue 425: Shift+ PgUp/PgDn does not work in text editor.
    - Fix issue 1390: Image is not updated until restart if deleted and re-added.
    - Fix issue 1413: Crashes when opening a particular epub.