@@ -36,11 +36,6 @@
 using boost::make_tuple;
 
 
-// The maximum allowed distance (in lines) that a heading
-// can be located from a body tag and still
-// be detected as the "name" for that chapter.
-// The value was picked arbitrarily.
-static const int ALLOWED_HEADING_DISTANCE = 20;
 static const QStringList HEADING_TAGS = QStringList() << "h1" << "h2" << "h3" << "h4" << "h5" << "h6";
 
 const QString NOT_IN_TOC_CLASS = "sigilNotInTOC";
@@ -105,10 +100,6 @@ QList< Headings::Heading > Headings::GetHeadingListForOneFile( HTMLResource* htm
         heading.level          = QString( XtoQ( element.getTagName() ).at( 1 ) ).toInt();
         heading.include_in_toc = !XtoQ( element.getAttribute( QtoX( "class" ) ) )
                                  .contains( NOT_IN_TOC_CLASS );
-        heading.at_file_start  =
-            i == 0 &&
-            XhtmlDoc::NodeLineNumber( element ) -
-            XhtmlDoc::NodeLineNumber( body_element ) < ALLOWED_HEADING_DISTANCE;
 
         if ( heading.include_in_toc || include_unwanted_headings )
 
