@@ -190,18 +190,8 @@ NCXModel::NCXEntry NCXWriter::ConvertHeadingWalker( Headings::Heading &heading )
         ncx_child.text = heading.text;
         QString heading_file = heading.resource_file->GetRelativePathToOEBPS();       
 
-        // If this heading appears right after a section break,
-        // then it "represents" and links to its file; otherwise,
-        // we link to the heading element directly
-        if ( heading.at_file_start )
-        {
-           ncx_child.target = Utility::URLEncodePath( heading_file );
-        }
-        else
-        { 
-            QString path = heading_file + "#" + XtoQ( heading.element->getAttribute( QtoX( "id" ) ) );
-            ncx_child.target = Utility::URLEncodePath( path );
-        }
+        QString path = heading_file + "#" + XtoQ( heading.element->getAttribute( QtoX( "id" ) ) );
+        ncx_child.target = Utility::URLEncodePath( path );
     }
 
     foreach( Headings::Heading child_heading, heading.children )
